# image-caption-pipeline

./: .gitignore  Dockerfile  README.md  TODO.md  main.py  model_pipeline.py  pyproject.toml  requirements.txt  test_main.py
.github/workflows/: ci.yml
