[tool.poetry]
name = "image-caption-pipeline"
version = "0.1.0"
description = ""
authors = ["dolelongan <dolelongan@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.2"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
httpx = "^0.25.0"
pillow = "^10.1.0"
python-multipart = "^0.0.6"
torch = "^2.1.0"
transformers = "^4.35.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.2"
black = "^23.10.1"
mypy = "^1.6.1"
pytest = "^7.4.3"
coverage = "^7.3.2"
pillow = "^10.1.0"
python-multipart = "^0.0.6"
torch = "^2.1.0"
transformers = "^4.35.0"

[tool.black]
line-length = 88

[tool.ruff]
select = ["E", "F", "I"]
fixable = ["ALL"]
exclude = [".git", ".mypy_cache", ".ruff_cache"]
line-length = 88

[tool.mypy]
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_equality = true
disallow_untyped_decorators = false
ignore_missing_imports = true
implicit_reexport = true
plugins = "pydantic.mypy"

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.poe.tasks]
compose = "uvicorn 'main:app' --host=0.0.0.0 --port=8000"
format = "black --check ."
lint = "ruff --output-format=github ./main.py"
typecheck = "mypy ./*.py"
test = "run coverage run --source ./ -m pytest"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"